<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Gradle Android Project</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_from_project_title">Main project:</string>
    <string name="hello_from_library_project_title">Library project:</string>
    <string name="hello_from_artifact_jar_title">Maven jar artifact dependency:</string>
    <string name="hello_from_jni_title">Native code:</string>
    <string name="hello_from_so_title">.so library:</string>
    <string name="hello_from_local_repo_title">Local repo lib:</string>
    <string name="hello_from_build_config_title">BuildConfig.java:</string>

</resources>
