<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/hello_from_project_title"
        style="@style/MainScreenEntryTitle"
        android:text="@string/hello_from_project_title"/>

    <TextView
        android:id="@+id/hello_from_project"
        style="@style/MainScreenEntryValue"
        android:layout_alignBottom="@id/hello_from_project_title"/>

    <TextView
        android:id="@+id/hello_from_library_project_title"
        style="@style/MainScreenEntryTitle"
        android:layout_below="@id/hello_from_project_title"
        android:text="@string/hello_from_library_project_title"/>

    <TextView
        android:id="@+id/hello_from_library_project"
        style="@style/MainScreenEntryValue"
        android:layout_alignBottom="@id/hello_from_library_project_title"/>

    <TextView
        android:id="@+id/hello_from_artifact_jar_title"
        style="@style/MainScreenEntryTitle"
        android:layout_below="@id/hello_from_library_project_title"
        android:text="@string/hello_from_artifact_jar_title"/>

    <TextView
        android:id="@+id/hello_from_artifact_jar"
        style="@style/MainScreenEntryValue"
        android:layout_alignBottom="@id/hello_from_artifact_jar_title"/>

    <TextView
        android:id="@+id/hello_from_jni_title"
        style="@style/MainScreenEntryTitle"
        android:layout_below="@id/hello_from_artifact_jar_title"
        android:text="@string/hello_from_jni_title"/>

    <TextView
        android:id="@+id/hello_from_jni"
        style="@style/MainScreenEntryValue"
        android:layout_alignBottom="@id/hello_from_jni_title"/>

    <TextView
        android:id="@+id/hello_from_so_title"
        style="@style/MainScreenEntryTitle"
        android:layout_below="@id/hello_from_jni_title"
        android:text="@string/hello_from_so_title"/>

    <TextView
        android:id="@+id/hello_from_so"
        style="@style/MainScreenEntryValue"
        android:layout_alignBottom="@id/hello_from_so_title"/>


    <TextView
        android:id="@+id/hello_from_local_repo_title"
        style="@style/MainScreenEntryTitle"
        android:layout_below="@id/hello_from_so_title"
        android:text="@string/hello_from_local_repo_title"/>

    <TextView
        android:id="@+id/hello_from_local_repo"
        style="@style/MainScreenEntryValue"
        android:layout_alignBottom="@id/hello_from_local_repo_title"/>

    <TextView
        android:id="@+id/hello_from_build_config_title"
        style="@style/MainScreenEntryTitle"
        android:layout_below="@id/hello_from_local_repo_title"
        android:text="@string/hello_from_build_config_title"/>

    <TextView
        android:id="@+id/hello_from_build_config"
        style="@style/MainScreenEntryValue"
        android:layout_alignBottom="@id/hello_from_build_config_title"/>

</RelativeLayout>
